--- a/packages/qmongjs/src/components/RegisterPage/header/header.module.css
+++ b/packages/qmongjs/src/components/RegisterPage/header/header.module.css
@@ -5,6 +5,10 @@
   background-color: rgba(222, 231, 238, 0.8);
 }
 
+.redBackground {
+  background-color: rgba(238, 222, 234, 0.8);
+}
+
 .headerText {
   width: 98%;
   margin: 5px auto;
