--- a/packages/qmongjs/src/components/IndicatorTable/indicatordescription/indicatordescription.module.css
+++ b/packages/qmongjs/src/components/IndicatorTable/indicatordescription/indicatordescription.module.css
@@ -23,7 +23,7 @@
 }
 .not_complete_year h4 {
   margin: 5px 5px 10px 0.5rem;
-  color: #7d8588;
+  color: #000000;
   font-size: 1rem;
   font-weight: 400;
 }
