--- a/apps/skde/src/styles/Kvalitetsregistre.module.css
+++ b/apps/skde/src/styles/Kvalitetsregistre.module.css
@@ -31,6 +31,11 @@
   box-shadow: 0 4px 5px -1px #dcdcdc;
 }
 
+.kvalitetsregister table {
+  border-bottom: 1rem solid #00263d;
+  border-radius: 0.5rem;
+}
+
 /******media upto 768*****/
 
 @media All and (max-width: 768px) {
