Fikset problem med at siste link hadde en annen bredde, og fjernet tom plass i atlas-linkene

--- a/apps/skde/src/components/Buttons/AtlasLink.module.css
+++ b/apps/skde/src/components/Buttons/AtlasLink.module.css
@@ -47,8 +47,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  padding: 20px 25px 0 25px;
-  height: 380px;
+  padding: 20px 25px 20px 25px;
 }
 
 .linkDateContainer {
