La til litt farge på img:hover sånn at det er tydeligere at man kan trykke på en Helseatlas-link

--- a/apps/skde/src/components/Buttons/AtlasLink.module.css
+++ b/apps/skde/src/components/Buttons/AtlasLink.module.css
@@ -14,6 +14,13 @@
   transition: box-shadow 0.1s ease-out;
 }
 
+.linkOuterWrapper:hover .linkImageWrapper img,
+.linkOuterWrapper:focus .linkImageWrapper img {
+  background-color: #c6e6df;
+  transition: opacity 0.1s ease-in;
+  opacity: 0.8;
+}
+
 .linkOuterWrapper:hover .linkTitle,
 .linkOuterWrapper:focus .linkTitle {
   text-decoration: underline;
