--- a/apps/skde/src/components/AnalyseBox/AnalyseBox.module.css
+++ b/apps/skde/src/components/AnalyseBox/AnalyseBox.module.css
@@ -2,7 +2,31 @@
 .analyse-box {
     border: 1px solid rgb(0, 48, 135);
     border-radius: 24px;
-    padding: 20px;
+    padding: 25px;
     margin: 30px 0px;
-    max-width: 1216px;
+    max-width: 1000px;
+}
+.chart-container {
+    width: 100%;
+    height: 70vw;
+    max-height: 700px;
+    min-height: 350px;
+    margin-top: 25px;
+}
+
+.tag {
+    margin-right: 16px;
+    margin-top: 8px;
+    background-color: rgb(0, 48, 100);
+    padding: 5px 15px;
+    color: white;
+    border-radius: 16px;
+    font-weight: 500;
+}
+.tag:last-child {
+    margin-right: 0px;
+}
+.tag-container {
+    display: flex;
+    flex-wrap: wrap;
 }
