--- a/apps/skde/src/components/AnalyseBox/AnalyseBox.module.css
+++ b/apps/skde/src/components/AnalyseBox/AnalyseBox.module.css
@@ -2,15 +2,14 @@
 .analyse-box {
     border: 1px solid rgb(0, 48, 135);
     border-radius: 24px;
-    padding: 25px;
-    margin: 30px 0px;
+    margin-bottom: 40px;
     max-width: 1000px;
 }
 .chart-container {
     width: 100%;
-    height: 70vw;
+    height: 80vw;
     max-height: 700px;
-    min-height: 350px;
+    min-height: 450px;
     margin-top: 25px;
 }
 
@@ -29,4 +28,5 @@
 .tag-container {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 8px;
 }
