--- a/apps/skde/src/components/Buttons/AtlasLink.module.css
+++ b/apps/skde/src/components/Buttons/AtlasLink.module.css
@@ -1,39 +1,32 @@
 .linkOuterWrapper {
-  max-width: 47%;
-  min-width: 350px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  max-width: min(100%, 610px);
+  min-width: 300px;
   background: #e3f3ef;
   transition: 100ms ease-in;
-  flex: 1 1 45%;
+  flex: 1 1 250px;
   overflow: hidden;
+  border-radius: 24px;
+}
+
+.linkOuterWrapper,
+.linkOuterWrapper img {
+  transition: 0.1s ease-out;
 }
 
 .linkOuterWrapper:hover,
 .linkOuterWrapper:focus {
+  box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.24);
+}
+
+.linkOuterWrapper:hover .linkImageWrapper img,
+.linkOuterWrapper:focus .linkImageWrapper img {
   background-color: #c6e6df;
+  opacity: 0.8;
 }
 
 .linkOuterWrapper:hover .linkTitle,
 .linkOuterWrapper:focus .linkTitle {
   text-decoration: underline;
-}
-
-.linkImageWrapper::before,
-.linkImageWrapper::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: none;
-  transition: 100ms ease-in;
-  z-index: 2;
-}
-
-.linkOuterWrapper:hover .linkImageWrapper::before,
-.linkOuterWrapper:focus .linkImageWrapper::before {
-  background-color: #c6e6df;
-  opacity: 0.3;
 }
 
 .linkInnerWrapper {
@@ -53,8 +46,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  padding: 20px 25px 0 25px;
-  height: 380px;
+  padding: 20px 25px 20px 25px;
 }
 
 .linkDateContainer {
@@ -100,7 +92,7 @@
 .linkTitle {
   font-style: normal;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 26px;
   line-height: 49px;
   letter-spacing: 0.01em;
   padding-top: 20px;
@@ -114,12 +106,19 @@
 }
 
 @media screen and (min-width: 943px) {
+  .linkOuterWrapper {
+    flex-basis: 400px;
+  }
+
+  .linkTitle {
+    font-size: 36px;
+  }
+
   .linkOuterWrapper.wide {
     max-width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
     background: #e6eef8;
-    transition: 100ms ease-in;
     flex: 1 1 100%;
   }
 
@@ -137,16 +136,5 @@
   .linkOuterWrapper.wide .linkText {
     flex: 1;
     height: 350px;
-  }
-
-  .wide.linkOuterWrapper:hover,
-  .wide.linkOuterWrapper:focus {
-    background-color: rgba(0, 48, 135, 0.2);
-  }
-
-  .wide.linkOuterWrapper:hover .linkImageWrapper::before,
-  .wide.linkOuterWrapper:focus .linkImageWrapper::before {
-    background-color: rgba(0, 48, 135, 0.5);
-    opacity: 0.3;
   }
 }
