Revert globals.css

--- a/apps/skde/src/styles/globals.css
+++ b/apps/skde/src/styles/globals.css
@@ -19,6 +19,26 @@ a {
   box-sizing: border-box;
 }
 
+h1 {
+  font-weight: 300;
+  font-size: 48px;
+}
+
+h2 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 24px;
+  text-transform: uppercase;
+  border-bottom: 2px solid #cddbe8;
+  padding-bottom: 15px;
+}
+
+h3 {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+}
+
 /* breadcrumbs */
 
 .breadcrum {
